--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -1,2 +1,13 @@
+name: Debug Workflow
+
+on: [push]  # Runs on every push (modify as needed)
+
+jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: List all environment variables
         run: env
