--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Print received payload
         run: |
           echo "Customer Name: ${{ github.event.client_payload.customer_name }}"
-          echo "IPv4 CIDR: ${{ github.event.client_payload.extra_data.ipv4_cidr }}"
+          echo "IPv4 CIDR: $(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
           echo "VPN Routing: ${{ github.event.client_payload.vpn_routing }}"
           echo "ASN: ${{ github.event.client_payload.asn }}"
           echo "Encryption Phase1: ${{ github.event.client_payload.encryption_phase1 }}"
