--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -8,6 +8,15 @@ jobs:
   vpn:
     runs-on: ubuntu-latest
     steps:
+      - name: Extract Extra Data
+        run: |
+            EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
+            echo "Extracted JSON: $EXTRA_DATA_JSON"
+        
+            # Parse IPv4 CIDR from JSON
+            IPV4_CIDR=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
+            echo "IPv4 CIDR: $IPV4_CIDR"
+            shell: bash
       - name: Print received payload
         run: |
           echo "Customer Name: ${{ github.event.client_payload.customer_name }}"
@@ -21,3 +30,5 @@ jobs:
           echo "Lifetime Phase1: ${{ github.event.client_payload.lifetime_phase1 }}"
           echo "IKE Version Phase1: ${{ github.event.client_payload.ike_version_phase1 }}"
           echo "Extra Data: ${{ github.event.client_payload.extra_data }}"
+
+      
