--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -8,8 +8,8 @@ jobs:
   vpn:
     runs-on: ubuntu-latest
     steps:
-      # - name: Extract Extra Data
-       # run: |
+       #- name: Extract Extra Data
+       #  run: |
        #     EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
        #     echo "Extracted JSON: $EXTRA_DATA_JSON"
        # 
@@ -22,7 +22,7 @@ jobs:
           EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
           echo "Extracted JSON: $EXTRA_DATA_JSON"
           echo "Customer Name: ${{ github.event.client_payload.customer_name }}"
-          echo "IPv4 CIDR: $(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
+          IPv4 CIDR: $(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
           echo "VPN Routing: ${{ github.event.client_payload.vpn_routing }}"
           echo "ASN: ${{ github.event.client_payload.asn }}"
           echo "Encryption Phase1: ${{ github.event.client_payload.encryption_phase1 }}"
