--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -2,27 +2,22 @@ name: VPN Request Workflow
 
 on:
   repository_dispatch:
-    types: [vpn_request]  # This must match `event_type` in your Apps Script
+    types: [vpn_request]
 
 jobs:
   vpn:
     runs-on: ubuntu-latest
     steps:
-       #- name: Extract Extra Data
-       #  run: |
-       #     EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
-       #     echo "Extracted JSON: $EXTRA_DATA_JSON"
-       # 
-       #     # Parse IPv4 CIDR from JSON
-       #     IPV4_CIDR=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
-       #     echo "IPv4 CIDR: $IPV4_CIDR"
-       #    # echo "IPv4 CIDR: $IPV4_CIDR"
       - name: Print received payload
         run: |
           EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
           echo "Extracted JSON: $EXTRA_DATA_JSON"
           echo "Customer Name: ${{ github.event.client_payload.customer_name }}"
-          IPv4 CIDR: $(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
+
+          # Extract IPv4 CIDR from JSON
+          IPV4_CIDR=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
+          echo "IPv4 CIDR: $IPV4_CIDR"
+
           echo "VPN Routing: ${{ github.event.client_payload.vpn_routing }}"
           echo "ASN: ${{ github.event.client_payload.asn }}"
           echo "Encryption Phase1: ${{ github.event.client_payload.encryption_phase1 }}"
@@ -31,6 +26,4 @@ jobs:
           echo "DH Group Phase1: ${{ github.event.client_payload.dh_group_phase1 }}"
           echo "Lifetime Phase1: ${{ github.event.client_payload.lifetime_phase1 }}"
           echo "IKE Version Phase1: ${{ github.event.client_payload.ike_version_phase1 }}"
-          echo "Extra Data: ${{ github.event.client_payload.extra_data }}"
-
-      
+          echo "Extra Data: $EXTRA_DATA_JSON"
