--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -27,6 +27,18 @@ jobs:
           echo "ike_version_phase2: $ike_version_phase2"
           customer_gateway_ip=$(echo "$EXTRA_DATA_JSON" | jq -r '.customer_gateway_ip')
           echo "customer_gateway_ip: $customer_gateway_ip"
+          others=$(echo "$EXTRA_DATA_JSON" | jq -r '.others')
+          echo "others: $others"
+          contact_person=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person')
+          echo "contact_person: $contact_person"
+          contact_person_email=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person_email')
+          echo "contact_person_email: $contact_person_email"
+          firewall_vendor=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_vendor')
+          echo "firewall_vendor: $firewall_vendor"
+          device_details=$(echo "$EXTRA_DATA_JSON" | jq -r '.device_details')
+          echo "device_details: $device_details"
+          firewall_version=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_version')
+          echo "firewall_version: $firewall_version"
           echo "vpn_routing: ${{ github.event.client_payload.vpn_routing }}"
           echo "ASN: ${{ github.event.client_payload.asn }}"
           echo "encryption_phase1: ${{ github.event.client_payload.encryption_phase1 }}"
