--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -67,11 +67,14 @@ jobs:
           # Fetch all Transit Gateway Route Tables
           TGW_RT_IDS=$(aws ec2 describe-transit-gateway-route-tables --query 'TransitGatewayRouteTables[*].TransitGatewayRouteTableId' --output text)
       
-          MESSAGE=$(printf "🚨 **CIDR Overlap Detected!** 🚨\n\n")
-          MESSAGE+=$(printf "🔹 **Customer Name:** $customer_name\n")
-          MESSAGE+=$(printf "🔹 **Input CIDR:** $ipv4_cidr\n\n")
-          MESSAGE+=$(printf "**🔹 Overlapping CIDRs:**\n")
-      
+          MESSAGE="🚨 **CIDR Overlap Detected!** 🚨\n\n"
+          MESSAGE+="🔹 **Customer Name:** $customer_name\n"
+          MESSAGE+="🔹 **Input CIDR:** $ipv4_cidr\n\n"
+          MESSAGE+="**🔹 Overlapping CIDRs:**\n"
+
+          # Flag to check if we found any overlap
+          overlap_found=false
+          
           for TGW_RT_ID in $TGW_RT_IDS; do
             echo "Checking TGW Route Table: $TGW_RT_ID"
       
@@ -80,19 +83,26 @@ jobs:
               --transit-gateway-route-table-id $TGW_RT_ID \
               --filters Name=type,Values=active \
               --query 'Routes[*].DestinationCidrBlock' --output json)
+            
+            echo "Existing CIDRs in TGW Route Table $TGW_RT_ID: $EXISTING_CIDRS"
       
             for CIDR in $(echo $EXISTING_CIDRS | jq -r '.[]'); do
               if [[ "$CIDR" != "0.0.0.0/0" && "$CIDR" == "$ipv4_cidr" ]]; then
                 #MESSAGE+="🔹 $CIDR (TGW Route Table: $TGW_RT_ID)\n"
-                MESSAGE+=$(printf "🔹 $CIDR (TGW Route Table: $TGW_RT_ID)\n")
+                MESSAGE+="🔹 $CIDR (TGW Route Table: $TGW_RT_ID)\n"
+                overlap_found=true
               fi
             done
           done
-      
-          if [[ "$MESSAGE" != *"Overlapping CIDRs"* ]]; then
+          if [ "$overlap_found" = false ]; then
             echo "No overlapping CIDRs found. Exiting."
             exit 0
           fi
+          echo -e "Final Message:\n$MESSAGE"
+          #if [[ "$MESSAGE" != *"Overlapping CIDRs"* ]]; then
+          #  echo "No overlapping CIDRs found. Exiting."
+          #  exit 0
+          #fi
       
           # Send SNS Alert
           aws sns publish \
