--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -8,110 +8,40 @@ jobs:
   vpn:
     runs-on: ubuntu-latest
     steps:
-      - name: Print received payload
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Extract VPN Request Data
         run: |
+          echo "Extracting data from GitHub event..."
+          
+          # Extract JSON from payload
           EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
           echo "Extracted JSON: $EXTRA_DATA_JSON"
-          echo "customer_name: ${{ github.event.client_payload.customer_name }}"
 
-          # Extract values from JSON
+          # Extract variables
           ipv4_cidr=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
-          integrity_phase2=$(echo "$EXTRA_DATA_JSON" | jq -r '.integrity_phase2')
-          dh_group_phase2=$(echo "$EXTRA_DATA_JSON" | jq -r '.dh_group_phase2')
-          life_time_renegotiation=$(echo "$EXTRA_DATA_JSON" | jq -r '.life_time_renegotiation')
-          ike_version_phase2=$(echo "$EXTRA_DATA_JSON" | jq -r '.ike_version_phase2')
-          customer_gateway_ip=$(echo "$EXTRA_DATA_JSON" | jq -r '.customer_gateway_ip')
-          others=$(echo "$EXTRA_DATA_JSON" | jq -r '.others')
-          contact_person=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person')
-          contact_person_email=$(echo "$EXTRA_DATA_JSON" | jq -r '.contact_person_email')
-          firewall_vendor=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_vendor')
-          device_details=$(echo "$EXTRA_DATA_JSON" | jq -r '.device_details')
-          firewall_version=$(echo "$EXTRA_DATA_JSON" | jq -r '.firewall_version')
+          customer_name="${{ github.event.client_payload.customer_name }}"
 
-          echo "ipv4_cidr: $ipv4_cidr"
-          echo "integrity_phase2: $integrity_phase2"
-          echo "dh_group_phase2: $dh_group_phase2"
-          echo "life_time_renegotiation: $life_time_renegotiation"
-          echo "ike_version_phase2: $ike_version_phase2"
-          echo "customer_gateway_ip: $customer_gateway_ip"
-          echo "others: $others"
-          echo "contact_person: $contact_person"
-          echo "contact_person_email: $contact_person_email"
-          echo "firewall_vendor: $firewall_vendor"
-          echo "device_details: $device_details"
-          echo "firewall_version: $firewall_version"
+          echo "CIDR: $ipv4_cidr"
+          echo "customer_name: $customer_name"
 
-          echo "vpn_routing: ${{ github.event.client_payload.vpn_routing }}"
-          echo "ASN: ${{ github.event.client_payload.asn }}"
-          echo "encryption_phase1: ${{ github.event.client_payload.encryption_phase1 }}"
-          echo "encryption_phase2: ${{ github.event.client_payload.encryption_phase2 }}"
-          echo "integrity_phase1: ${{ github.event.client_payload.integrity_phase1 }}"
-          echo "dh_group_phase1: ${{ github.event.client_payload.dh_group_phase1 }}"
-          echo "lifetime_phase1: ${{ github.event.client_payload.lifetime_phase1 }}"
-          echo "ike_version_phase1: ${{ github.event.client_payload.ike_version_phase1 }}"
-          echo "Extra Data: $EXTRA_DATA_JSON"
+          # Export values for next steps
+          echo "IPV4_CIDR=$ipv4_cidr" >> $GITHUB_ENV
+          echo "customer_name=$customer_name" >> $GITHUB_ENV
 
-      - name: Send SNS Alert if Overlapping
-        #if: env.overlap_found == 'true'
+      - name: Install Dependencies
+        run: pip install boto3
+
+      - name: Run CIDR Overlap Check
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-        run: |
-          customer_name="${{ github.event.client_payload.customer_name }}"
-          EXTRA_DATA_JSON='${{ github.event.client_payload.extra_data }}'
-          ipv4_cidr=$(echo "$EXTRA_DATA_JSON" | jq -r '.ipv4_cidr')
-          echo "customer_name: $customer_name"
-          echo "ipv4_cidr: $ipv4_cidr"
-      
-          # Fetch all Transit Gateway Route Tables
-          TGW_RT_IDS=$(aws ec2 describe-transit-gateway-route-tables --query 'TransitGatewayRouteTables[*].TransitGatewayRouteTableId' --output text)
-          
-          MESSAGE="🚨 **CIDR Overlap Detected!** 🚨\n\n"
-          MESSAGE+="🔹 **Customer Name:** $customer_name\n"
-          MESSAGE+="🔹 **Input CIDR:** $ipv4_cidr\n\n"
-          MESSAGE+="**🔹 Overlapping CIDRs:**\n"
-
-          # Flag to check if we found any overlap
-          #overlap_found=false
-          echo "Retrieved TGW Route Tables: $TGW_RT_IDS"
-          for TGW_RT_ID in $TGW_RT_IDS; do
-            echo "Checking TGW Route Table: $TGW_RT_ID"
-      
-            # Fetch CIDRs from this route table
-            EXISTING_CIDRS=$(aws ec2 search-transit-gateway-routes \
-              --transit-gateway-route-table-id $TGW_RT_ID \
-              --filters Name=type,Values=active \
-              --query 'Routes[*].DestinationCidrBlock' --output json)
-            
-            echo "Existing CIDRs in TGW Route Table $TGW_RT_ID: $EXISTING_CIDRS"
-      
-            for CIDR in $(echo $EXISTING_CIDRS | jq -r '.[]'); do
-              echo "Checking CIDR: $CIDR"
-              if [[ "$CIDR" != "0.0.0.0/0" && "$CIDR" == "$ipv4_cidr" ]]; then
-                #MESSAGE+="🔹 $CIDR (TGW Route Table: $TGW_RT_ID)\n"
-                echo "Match Found! CIDR: $CIDR in TGW Route Table: $TGW_RT_ID"
-                MESSAGE+="🔹 $CIDR (TGW Route Table: $TGW_RT_ID)\n"
-                overlap_found=true
-              fi
-            done
-          done
-          if [ "$overlap_found" = false ]; then
-            echo "No overlapping CIDRs found. Exiting."
-            exit 0
-          fi
-          echo "Final TGW Route Table IDs: $TGW_RT_IDS"
-          echo "Final CIDRs checked: $EXISTING_CIDRS"
-          echo "Final Message Before Sending:"
-          echo -e "Final Message:\n$MESSAGE"
-          #if [[ "$MESSAGE" != *"Overlapping CIDRs"* ]]; then
-          #  echo "No overlapping CIDRs found. Exiting."
-          #  exit 0
-          #fi
-      
-          # Send SNS Alert
-          aws sns publish \
-            --topic-arn arn:aws:sns:us-east-1:590184024707:tyfone-poc \
-            --message "$MESSAGE" \
-            --subject "🚨 CIDR Overlap Alert for $customer_name : $ipv4_cidr" \
-            --region us-east-1
+          AWS_REGION: "us-east-1"
+          SNS_TOPIC_ARN: "arn:aws:sns:us-east-1:590184024707:tyfone-poc"
+        run: python check_cidr.py
