--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -165,7 +165,7 @@ jobs:
         run: |
           env | grep TF_VAR_
           echo "No CIDR overlap detected. Proceeding with Terraform deployment..."
-          terraform init
+          terraform init -backend-config="key=${customer_name}.tfstate"
           terraform plan
           terraform apply -auto-approve
         env:
