--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -68,7 +68,7 @@ jobs:
           echo "device_details: $device_details"
           echo "firewall_version: $firewall_version"
           echo "vpn_routing: $vpn_routing"
-          echo "ASN: $asn"
+          echo "asn: $asn"
           echo "encryption_phase1: $encryption_phase1"
           echo "encryption_phase2: $encryption_phase2"
           echo "integrity_phase1: $integrity_phase1"
@@ -92,7 +92,7 @@ jobs:
             echo "device_details=$device_details"
             echo "firewall_version=$firewall_version"
             echo "vpn_routing=$vpn_routing"
-            echo "ASN=$asn"
+            echo "asn=$asn"
             echo "encryption_phase1=$encryption_phase1"
             echo "encryption_phase2=$encryption_phase2"
             echo "integrity_phase1=$integrity_phase1"
@@ -111,7 +111,7 @@ jobs:
             echo "TF_VAR_ike_version_phase2=$ike_version_phase2"
             echo "TF_VAR_customer_gateway_ip=$customer_gateway_ip"
             echo "TF_VAR_vpn_routing=$vpn_routing"
-            echo "TF_VAR_ASN=$ASN"
+            echo "TF_VAR_asn=$asn"
             echo "TF_VAR_encryption_phase1=$encryption_phase1"
             echo "TF_VAR_encryption_phase2=$encryption_phase2"
             echo "TF_VAR_integrity_phase1=$integrity_phase1"
@@ -132,7 +132,7 @@ jobs:
           echo "TF_VAR_ike_version_phase2=$ike_version_phase2"
           echo "TF_VAR_customer_gateway_ip=$customer_gateway_ip"
           echo "TF_VAR_vpn_routing=$vpn_routing"
-          echo "TF_VAR_ASN=$ASN"
+          echo "TF_VAR_asn=$asn"
           echo "TF_VAR_encryption_phase1=$encryption_phase1"
           echo "TF_VAR_encryption_phase2=$encryption_phase2"
           echo "TF_VAR_integrity_phase1=$integrity_phase1"
