--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -69,11 +69,14 @@ jobs:
   check_cidr:
     runs-on: ubuntu-latest
     needs: extract_data
+    outputs:
+      overlap: ${{ steps.check.outputs.overlap }}
     steps:
       - name: Install Dependencies
         run: pip install boto3
 
       - name: Run CIDR Overlap Check
+        id: check
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -83,15 +86,15 @@ jobs:
           output=$(python check_cidr.py)
           echo "$output"
           if echo "$output" | grep -q "overlap=false"; then
-            echo "overlap=false" >> "$GITHUB_ENV"
+            echo "::set-output name=overlap::false"
           else
-            echo "overlap=true" >> "$GITHUB_ENV"
+            echo "::set-output name=overlap::true"
           fi
 
   deploy:
     runs-on: ubuntu-latest
     needs: check_cidr
-    if: env.overlap == 'false'
+    if: needs.check_cidr.outputs.overlap == 'false'
     steps:
       - name: Trigger Terraform (if no overlap)
         run: |
