--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -5,7 +5,7 @@ on:
     types: [vpn_request]
 
 jobs:
-  vpn:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -24,6 +24,10 @@ jobs:
       - name: Verify Terraform Installation
         run: terraform --version
 
+  extract_data:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Extract VPN Request Data
         run: |
           echo "Extracting data from GitHub event..."
@@ -141,7 +145,11 @@ jobs:
           echo "TF_VAR_lifetime_phase1=$lifetime_phase1"
           echo "TF_VAR_ike_version_phase1=$ike_version_phase1"
 
-          
+
+  check_cidr:
+    runs-on: ubuntu-latest
+    needs: extract_data
+    steps:
       - name: Install Dependencies
         run: pip install boto3
 
@@ -160,8 +168,12 @@ jobs:
             echo "overlap=true" >> "$GITHUB_ENV"
           fi
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: check_cidr
+    if: env.overlap == 'false'
+    steps:
       - name: Trigger Terraform (if no overlap)
-        if: env.overlap == 'false'
         run: |
           echo "No CIDR overlap detected. Proceeding with Terraform deployment..."
           terraform init -backend-config="key=${customer_name}.tfstate"
