--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -150,6 +150,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: extract_data
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       - name: Install Dependencies
         run: pip install boto3
 
