--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -147,11 +147,12 @@ jobs:
 
 
   check_cidr:
-    runs-on: ubuntu-latest
+    runs-on: setup
     needs: extract_data
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+      
       - name: Install Dependencies
         run: pip install boto3
 
