--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -147,7 +147,7 @@ jobs:
 
 
   check_cidr:
-    runs-on: setup
+    runs-on: ubuntu-latest
     needs: extract_data
     steps:
       - name: Checkout Repository
