--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -164,6 +164,8 @@ jobs:
           pwd  # Print the working directory
           echo "Listing all files:"
           ls -R  # Print all files recursively to locate check_cidr.py
+          echo "Python version:"
+          python --version  # Confirm Python version
       - name: Run CIDR Overlap Check
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -171,7 +173,7 @@ jobs:
           AWS_REGION: "us-east-1"
           SNS_TOPIC_ARN: "arn:aws:sns:us-east-1:590184024707:tyfone-poc"
         run: |
-          output=$(python check_cidr.py)
+          output=$(python ./check_cidr.py)
           echo "$output"
           if echo "$output" | grep -q "overlap=false"; then
             echo "overlap=false" >> "$GITHUB_ENV"
