--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -148,24 +148,26 @@ jobs:
 
   check_cidr:
     runs-on: ubuntu-latest
-    needs: extract_data
+    needs:
+      - setup
+      - extract_data
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Set Up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Install Dependencies
-        run: pip install boto3
-      - name: Debug Check Files & Current Directory
-        run: |
-          echo "Current directory:"
-          pwd  # Print the working directory
-          echo "Listing all files:"
-          ls -R  # Print all files recursively to locate check_cidr.py
-          echo "Python version:"
-          python --version  # Confirm Python version
+      #- name: Checkout Repository
+      #  uses: actions/checkout@v4
+      #- name: Set Up Python
+      #  uses: actions/setup-python@v4
+      #  with:
+      #    python-version: '3.9'
+      #- name: Install Dependencies
+      #  run: pip install boto3
+      #- name: Debug Check Files & Current Directory
+      #  run: |
+      #    echo "Current directory:"
+      #    pwd  # Print the working directory
+      #    echo "Listing all files:"
+      #    ls -R  # Print all files recursively to locate check_cidr.py
+      #    echo "Python version:"
+      #    python --version  # Confirm Python version
       - name: Run CIDR Overlap Check
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -183,7 +185,10 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: check_cidr
+    needs: 
+     - setup
+     - extract_data
+     - check_cidr
     if: needs.check_cidr.outputs.overlap == 'false'
     #if: env.overlap == 'false'
     steps:
