--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -175,7 +175,7 @@ jobs:
           AWS_REGION: "us-east-1"
           SNS_TOPIC_ARN: "arn:aws:sns:us-east-1:590184024707:tyfone-poc"
         run: |
-          output=$(python ./check_cidr.py)
+          output=$(python check_cidr.py)
           echo "$output"
           if echo "$output" | grep -q "overlap=false"; then
             echo "overlap=false" >> "$GITHUB_ENV"
