--- a/.github/workflows/vpn_request.yml
+++ b/.github/workflows/vpn_request.yml
@@ -168,6 +168,8 @@ jobs:
       #    ls -R  # Print all files recursively to locate check_cidr.py
       #    echo "Python version:"
       #    python --version  # Confirm Python version
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       - name: Debug Check Current Directory
         run: pwd && ls -lah  # Print working directory and file list
       - name: Run CIDR Overlap Check
